# AndroidPlayer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cwc/vplayer/: App.kt  MainActivity.kt
app/src/main/java/com/cwc/vplayer/base/: AbsActivity.kt  AbsFragment.kt
app/src/main/java/com/cwc/vplayer/base/inject/: RepositoryProvider.kt
app/src/main/java/com/cwc/vplayer/base/livedata/: SingleLiveEvent.java
app/src/main/java/com/cwc/vplayer/base/utils/: media.kt  observe.kt
app/src/main/java/com/cwc/vplayer/entity/: VideoCategory.java  VideoCategory.kt  VideoFile.java  VideoFile.kt
app/src/main/java/com/cwc/vplayer/entity/db/: AppDao.java  AppDataBase.java  dao.kt
app/src/main/java/com/cwc/vplayer/feed/: FeedListAdapter.kt  FeedMainActivity.kt  FeedVideoCard.kt  StandardPreviewPlayer.kt  VideoListAdapter.kt  VideoListFragment.kt  VideoListViewModel.kt
app/src/main/java/com/cwc/vplayer/ui/category/: CategoryAdapter.kt  CategoryFragment.kt  CategoryViewModel.kt
app/src/main/java/com/cwc/vplayer/ui/feed/: FeedVideoCard.kt  StandardPreviewPlayer.kt  VideoListAdapter.kt  VideoListFragment.kt  VideoListViewModel.kt
app/src/main/java/com/cwc/vplayer/ui/history/: HisotryItem.kt  HistoryFileBinder.kt  HistoryItemBinder.kt
app/src/main/java/com/cwc/vplayer/ui/like/: LikeFragment.kt  LikeViewModel.kt
app/src/main/java/com/cwc/vplayer/ui/main/: MainActivity.kt  MainViewModel.kt  MediaCodecUtils.java
app/src/main/java/com/cwc/vplayer/utils/: AutoPreviewCoordinator.kt  Media.kt  TimeUtils.java  TimeUtils.kt  observe.kt
app/src/main/res/drawable/: grey_bg.xml
app/src/main/res/layout/: activity_feed_main.xml  activity_main.xml  category_title.xml  feed_history_video_card.xml  feed_video_card.xml  fragment_category.xml  history_item.xml  video_card.xml  video_category.xml
app/src/main/res/menu/: menu_main.xml
gradle/wrapper/: gradle-wrapper.properties
vplayer_base/: CMakeLists.txt  build.gradle
vplayer_base/src/androidTest/java/com/example/vplayer_base/: ExampleInstrumentedTest.kt
vplayer_base/src/main/: AndroidManifest.xml
vplayer_base/src/main/cpp/: native-lib.cpp
vplayer_base/src/main/java/com/cwc/vplayer/controller/: GSYMediaPlayerListener.java  GSYSampleCallBack.java  GSYVideoBaseManager.java  GSYVideoManager.java  GSYVideoOptionBuilder.java  GSYVideoViewBridge.java  MediaPlayerListener.java  SimpleVideoAllCallBack.java  VideoBaseManager.java  VideoManager.java  VideoOptionBuilder.java  VideoViewBridge.java
vplayer_base/src/main/java/com/cwc/vplayer/factory/: CacheFactory.java  CacheListener.java  PlayerFactory.java
vplayer_base/src/main/java/com/cwc/vplayer/jni/: Utils.java
vplayer_base/src/main/java/com/cwc/vplayer/player/impl/: IjkPlayerManager.java  MyMediaPlayer.java  MyMediaPlayerWrapper.java
vplayer_base/src/main/java/com/cwc/vplayer/utils/: AnimatedGifEncoder.java  CommonUtil.java  Debuger.java  FileUtils.java  GSYVideoHelper.java  ListVideoUtil.java  MeasureHelper.java  NetInfoModule.java  NetworkUtils.java  OrientationOption.java  OrientationUtils.java  RawDataSourceProvider.java  StorageUtils.java  VideoHelper.java
vplayer_base/src/main/java/com/cwc/vplayer/view/display/: BaseVideoPlayer.java  GSYBaseVideoPlayer.java  GSYVideoControlView.java  GSYVideoPlayer.java  GSYVideoProgressListener.java  GSYVideoView.java  LockClickListener.java  SmallVideoTouch.java  StandardGSYVideoPlayer.java  StandardVideoPlayer.java  VideoAllCallBack.java  VideoControlView.java  VideoPlayer.java  VideoProgressListener.java  VideoView.java
vplayer_base/src/main/java/com/cwc/vplayer/view/end/: ENDownloadView.java  ENPlayView.java
vplayer_base/src/main/java/com/cwc/vplayer/view/render/: GSYRenderView.java  GSYSurfaceView.java  GSYTextureRenderView.java  GSYTextureView.java  GSYVideoGLView.java  IGSYRenderView.java  IRenderView.java  RenderView.java  VSurfaceView.java  VTextureRenderView.java  VTextureView.java  VideoGLView.java
vplayer_base/src/main/java/com/cwc/vplayer/view/widget/: ENDownloadView.java  ENPlayView.java
vplayer_base/src/main/res/drawable/: empty_drawable.xml  video_dialog_progress_bg.xml  video_jump_btn_bg.xml  video_seek_thumb.xml  video_seek_thumb_normal.xml  video_seek_thumb_pressed.xml  video_title_bg.xml  video_volume_progress_bg.xml
vplayer_base/src/main/res/layout/: video_brightness.xml  video_layout_standard.xml  video_progress_dialog.xml  video_volume_dialog.xml
vplayer_base/src/main/res/values/: style.xml
vplayer_base/src/test/java/com/example/vplayer_base/: ExampleUnitTest.kt
vplayer_native/: CMakeLists.txt  build.gradle
vplayer_native/src/main/: AndroidManifest.xml
vplayer_native/src/main/cpp/: adev-android.cpp  adev-cmn.cpp  adev.h  easyPlayer.cpp  easy_player.cpp  easy_player.h  ffplayer.cpp  ffplayer.h  ffplayer_jni.cpp  ffrender.cpp  ffrender.h  native-lib.cpp  pktqueue.h  recorder.cpp  recorder.h  render.cpp  render.h  render_thread.cpp  stdefine.h  utils.h  vdev-android.cpp  vdev-cmn.cpp  vdev.h  vplayer.cpp  vplayer.h  vplayer_jni.cpp
vplayer_native/src/main/cpp/include/: easyPlayer.h
vplayer_native/src/main/cpp/trash/: native-lib.cpp  player.cpp  render_thread.cpp
vplayer_native/src/main/java/cn/jx/easyplayer/: EasyPlayer.java
vplayer_native/src/main/java/com/cwc/vplayer/jni/: AVUtils.java  MainActivity.kt  Utils.java
vplayer_native/src/main/java/com/rockcarry/ffplayer/: MainActivity.java  MediaPlayer.java  playerView.java
vplayer_native/src/main/res/layout/: activity_main.xml  main.xml
vplayer_native/src/main/res/values/: attrs.xml  id.xml  strings.xml  style.xml
(+24 files in other folders)
